force-app/main/default/objects/Certifications__c/Certifications__c.object-meta.xml
<CustomObject>
    <description>DLI</description>
    <label>Certifications</label>
    <nameField>
        <displayFormat>DLI CERT-{00000}</displayFormat>
        <label>Certifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>