force-app/main/default/objects/Certifications__c/fields/Application_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submission_Date__c</fullName>
    <description>SDS-2927 -DLI/DMS 2.0 project changes</description>
    <label>Application Submission Date</label>
    <type>Date</type>
</CustomField>