force-app/main/default/objects/Certifications__c/fields/Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Date__c</fullName>
    <description>SDS-2656 DLI/DMS 2.0 project - Label changed</description>
    <label>Certification Start Date</label>
    <type>Date</type>
</CustomField>