force-app/main/default/objects/Certifications__c/fields/Certification_Interview_Status__c.field-meta.xml
<CustomField>
    <fullName>Certification_Interview_Status__c</fullName>
    <description>SDS-2656: DLI/DMS 2.0 change</description>
    <label>Certification Interview Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>