force-app/main/default/objects/Certifications__c/fields/Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>Certification_Status__c</fullName>
    <description>SDS-2656: DLI/DMS 2.0 change</description>
    <label>Certification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Invalid – Too many workshops</fullName>
            </value>
            <value>
                <fullName>Invalid – No response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>