force-app/main/default/objects/Certifications__c/fields/Certified_By__c.field-meta.xml
<CustomField>
    <fullName>Certified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certified By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Certifications (Certified By)</relationshipLabel>
    <relationshipName>Certifications1</relationshipName>
    <type>Lookup</type>
</CustomField>