force-app/main/default/objects/Certifications__c/fields/Confidential_notes_DLI_internal_only__c.field-meta.xml
<CustomField>
    <fullName>Confidential_notes_DLI_internal_only__c</fullName>
    <description>SDS-2656: DLI/DMS 2.0 change
SDS-3007: Updated field Data type</description>
    <label>Confidential notes (DLI internal only)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>