force-app/main/default/objects/Certifications__c/fields/Count_of_Instructor_Assessment_Reset__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Instructor_Assessment_Reset__c</fullName>
    <description>SDS-2656: DLI/DMS 2.0 change</description>
    <label>Count of Instructor Assessment Reset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>