force-app/main/default/objects/Certifications__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>SDS-2656 DLI/DMS 2.0 project -Label change</description>
    <label>Certification End Date</label>
    <type>Date</type>
</CustomField>