force-app/main/default/objects/Certifications__c/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <description>SDS-3263</description>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Inactive__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covid</fullName>
            </value>
            <value>
                <fullName>Family constraints</fullName>
            </value>
            <value>
                <fullName>Work constraints</fullName>
            </value>
            <value>
                <fullName>Other reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>