force-app/main/default/objects/Certifications__c/fields/Instructions_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Instructions_Sent_Date__c</fullName>
    <description>DLI/DMS 2.1: SDS-3006</description>
    <label>Instructions Sent Date</label>
    <type>Date</type>
</CustomField>