force-app/main/default/objects/Certifications__c/fields/Instructor_Assessment_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Assessment_Completion_Date__c</fullName>
    <description>SDS-2656: DLI/DMS 2.0 change</description>
    <label>Instructor Assessment Completion Date</label>
    <type>Date</type>
</CustomField>