force-app/main/default/objects/Certifications__c/fields/Interview_notes_reason_for_pass_fail__c.field-meta.xml
<CustomField>
    <fullName>Interview_notes_reason_for_pass_fail__c</fullName>
    <description>SDS-2656: DLI/DMS 2.0 change</description>
    <label>Interview notes (reason for pass/fail)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>