force-app/main/default/objects/Certifications__c/fields/is_Certification_Active_Formula__c.field-meta.xml
<CustomField>
    <fullName>is_Certification_Active_Formula__c</fullName>
    <description>SDS-2793: This field auto calculates if the current Certification is Active/inActive</description>
    <formula>/*
IF( ISPICKVAL(Training_Service_Catalog__r.Active__c, &apos;Active&apos;) &amp;&amp; (ISBLANK(Expiration_Date__c) || Expiration_Date__c &gt; TODAY()), TRUE, FALSE)
*/

/* SDS-2950: Updated the previous version of the formula to replace Expiration Date logic with the Certification Status field*/
IF(ISPICKVAL(Certification_Status__c, &apos;Certified&apos;) &amp;&amp; ISPICKVAL(Training_Service_Catalog__r.Active__c, &apos;Active&apos;), TRUE, FALSE)</formula>
    <label>is Certification Active (F)</label>
    <type>Checkbox</type>
</CustomField>