force-app/main/default/objects/Certifications__c/fields/isCertification_Active__c.field-meta.xml
<CustomField>
    <fullName>isCertification_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-2793</description>
    <label>isCertification Active</label>
    <type>Checkbox</type>
</CustomField>