force-app/main/default/objects/Certifications__c/fields/isMasterInstructor__c.field-meta.xml
<CustomField>
    <fullName>isMasterInstructor__c</fullName>
    <description>SDS-2656: DLI/DMS 2.0 change</description>
    <label>isMasterInstructor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>