force-app/main/default/objects/Certifications__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <businessOwnerUser>ckillam@nvidia.com.trprod</businessOwnerUser>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>