force-app/main/default/objects/Certifications__c/fields/Master_Instructor_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Master_Instructor_Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDS-2656: DLI/DMS 2.0 change</description>
    <label>Master Instructor Interviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Certifications (Master Instructor Interviewer)</relationshipLabel>
    <relationshipName>Certifications2</relationshipName>
    <type>Lookup</type>
</CustomField>