force-app/main/default/objects/Certifications__c/fields/Reason_for_Failing_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Failing_if_applicable__c</fullName>
    <description>SDS-2656: DLI/DMS 2.0 change</description>
    <label>Reason for Failing (if applicable)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Certification_Interview_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lack of subject knowledge</fullName>
            </value>
            <value>
                <fullName>Requires better presentation skills</fullName>
            </value>
            <value>
                <fullName>Confusing explanations (i.e. students would find it hard to follow the instructor)</fullName>
            </value>
            <value>
                <fullName>Needs more confidence presenting</fullName>
            </value>
            <value>
                <fullName>Too advanced for workshop / better suited for other workshops</fullName>
            </value>
            <value>
                <fullName>Inaccurate / imprecise / cursory responses</fullName>
            </value>
            <value>
                <fullName>Abandoned / incomplete application</fullName>
            </value>
            <value>
                <fullName>Withdrew application – medical / professional / personal reasons</fullName>
            </value>
            <value>
                <fullName>Changed employment to an unaffiliated organization</fullName>
            </value>
            <value>
                <fullName>No NVIDIA relationship</fullName>
            </value>
            <value>
                <fullName>Duplicate record</fullName>
            </value>
            <value>
                <fullName>No show to interview, no response to follow-up</fullName>
            </value>
            <value>
                <fullName>Suspicious credentials (e.g. 10 Ph.D.s – this is a real example)</fullName>
            </value>
            <value>
                <fullName>Invalid email address – no way to contact</fullName>
            </value>
            <value>
                <fullName>Application responses reflect someone that is not serious about carrying out DLI mission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>