force-app/main/default/objects/Certifications__c/fields/Student_Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>Student_Assessment_Status__c</fullName>
    <description>SDS-2656: DLI/DMS 2.0 change</description>
    <label>Student Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>