force-app/main/default/objects/Certifications__c/fields/Training_Service_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Training_Service_Catalog__c</fullName>
    <description>SDS-2793: 5/28/2021: Updated Lookup filter to &apos;Optional&apos; from &apos;Required&apos;.</description>
    <label>Training Service Catalog</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Training_Service_Catalog__c.Active__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Training_Service_Catalog__c</referenceTo>
    <relationshipLabel>Certifications</relationshipLabel>
    <relationshipName>Certifications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>