force-app/main/default/objects/Certifications__c/fields/Training_Service_isActive__c.field-meta.xml
<CustomField>
    <fullName>Training_Service_isActive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDS-2656: DLI/DMS 2.0 change</description>
    <label>Training Service isActive</label>
    <referenceTo>Training_Service_Catalog__c</referenceTo>
    <relationshipLabel>Certifications (Training Service isActive)</relationshipLabel>
    <relationshipName>Certifications1</relationshipName>
    <type>Lookup</type>
</CustomField>