force-app/main/default/objects/Certifications__c/validationRules/Certification_start_date_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Certification_start_date_null</fullName>
    <active>true</active>
    <description>If the Certification Status is set as &quot;Certified&quot;, then a valid Certification Start Date should be entered</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Certification_Status__c, &quot;Certified&quot;),
 ISNULL( Certification_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Certification_Date__c</errorDisplayField>
    <errorMessage>Please Enter Valid Certification Start Date</errorMessage>
</ValidationRule>